tests/miniJava/neg/003059_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = while this ; } }
